--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
+# Ignore article attachments
+/public/system/files/*/*
+
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
