--- a/.rvmrc
+++ b/.rvmrc
@@ -5,11 +5,11 @@
 
 # First we specify our desired <ruby>[@<gemset>], the @gemset name is optional,
 # Only full ruby name is supported here, for short names use:
-#     echo "rvm use 1.8.7" > .rvmrc
-environment_id="ruby-1.8.7-p371"
+#     echo "rvm use 1.9.2" > .rvmrc
+environment_id="ruby-1.9.2-p320"
 
 # Uncomment the following lines if you want to verify rvm version per project
-# rvmrc_rvm_version="1.17.2 (stable)" # 1.10.1 seams as a safe start
+# rvmrc_rvm_version="1.16.15 (stable)" # 1.10.1 seams as a safe start
 # eval "$(echo ${rvm_version}.${rvmrc_rvm_version} | awk -F. '{print "[[ "$1*65536+$2*256+$3" -ge "$4*65536+$5*256+$6" ]]"}' )" || {
 #   echo "This .rvmrc file requires at least RVM ${rvmrc_rvm_version}, aborting loading."
 #   return 1
@@ -25,9 +25,13 @@ then
   \. "${rvm_path:-$HOME/.rvm}/environments/$environment_id"
   [[ -s "${rvm_path:-$HOME/.rvm}/hooks/after_use" ]] &&
     \. "${rvm_path:-$HOME/.rvm}/hooks/after_use" || true
+  if [[ $- == *i* ]] # check for interactive shells
+  then echo "Using: $(tput setaf 2)$GEM_HOME$(tput sgr0)" # show the user the ruby and gemset they are using in green
+  else echo "Using: $GEM_HOME" # don't use colors in non-interactive shells
+  fi
 else
   # If the environment file has not yet been created, use the RVM CLI to select.
-  rvm --create  "$environment_id" || {
+  rvm --create use  "$environment_id" || {
     echo "Failed to create RVM environment '${environment_id}'."
     return 1
   }
